<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".AddBooking">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextFields" />

    <Spinner
        android:id="@+id/sp_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/booking_type"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_serviceDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:minHeight="48dp"
        android:inputType="textMultiLine"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_timePicker"
        android:text="Booking Date"
        android:backgroundTint="@color/gray"
        android:visibility="gone"
        android:textAlignment="textStart"
        />

    <TextView
        android:id="@+id/tv_bookingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:text="15-11-19"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/teal_200"
        android:text="@string/create"/>

    </LinearLayout>

</LinearLayout>