<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        tools:text="@string/name"
        />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        tools:text="@string/address"
        />

     <TextView
         android:id="@+id/tv_email"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:textSize="15sp"
         android:textStyle="bold"
         android:layout_margin="10dp"
         android:visibility="gone"
         tools:text="@string/email"
         />

      <TextView
          android:id="@+id/tv_date"
          android:layout_width="wrap_content"
          android:layout_height="60dp"
          android:textSize="15sp"
          android:textStyle="bold"
          android:layout_margin="10dp"
          android:visibility="gone"
          tools:text="@string/date"
          />

     <TextView
         android:id="@+id/tv_type"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:textSize="15sp"
         android:textStyle="bold"
         android:layout_margin="10dp"
         android:visibility="gone"
         tools:text="@string/type"
         />

    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background= "@color/black"
        android:textSize="0sp"
        android:gravity="center_horizontal"/>

</LinearLayout>