<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".BookingActions">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:minHeight="48dp"
        android:background= "@color/blue"
        android:layout_marginBottom="15dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:background= "@color/blue"
        android:layout_marginBottom="15dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:minHeight="48dp"
        android:background= "@color/blue"
        android:layout_marginBottom="15dp"
        tools:ignore="Autofill,TextFields" />

    <Spinner
        android:id="@+id/sp_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/booking_type"
        android:background= "@color/blue"
        android:layout_marginBottom="15dp"
        android:minHeight="48dp" />

  <TextView
      android:id="@+id/tv_result"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:gravity="center"/>

    <EditText
        android:id="@+id/et_serviceDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Service Date:"
        android:minHeight="48dp"
        android:inputType="textMultiLine"
        android:background= "@color/blue"
        tools:ignore="Autofill,TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/teal_200"
        android:text="@string/save"/>
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/red"
        android:text="@string/delete"/>

    </LinearLayout>
</LinearLayout>