<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details"
    >

    <TextView
        android:id="@+id/customerdet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="Customer Details"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background= "@color/black"
        android:textSize="0sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/email"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background= "@color/black"
        android:textSize="0sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/address"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background= "@color/black"
        android:textSize="0sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/servicedet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Service Details"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background= "@color/black"
        android:textSize="0sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/type"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background= "@color/black"
        android:textSize="0sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/date"
        />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/time"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background= "@color/black"
        android:textSize="0sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

</LinearLayout>